Update generated Bach.java and the build program